--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.projetolocalizaentretelas">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,9 +12,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Projetolocalizaentretelas">
-        <activity android:name=".MoviesList"/>
-        <activity android:name=".MovieListDetailsActivity" />
-        <activity android:name=".MainActivity">
+        <activity android:name=".view.MainActivity"/>
+        <activity android:name=".view.MovieListDetailsActivity" />
+        <activity android:name=".MoviesList">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
